tests/ui/derive/fail_validate_unknown_struct_attribute_field.rs
#[derive(foundry::Validate)]
#[validate(attributes(emali = "email address"))]
struct UnknownStructAttributeField {
    #[validate(required)]
    email: String,
}

fn main() {}
